# BH-Bookstore-2023

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
backend/include/: bs-utility.h  builtin-cli.h  database.h  database.hpp  drivearray.hpp  engine.h  key2index.hpp  lexer.h  schedule.h
backend/src/: bs-utility.cpp  builtin-cli.cpp  database.cpp  engine.cpp  lexer.cpp  main.cpp  schedule.cpp
docs/develop/: 开发文档.md  总体设计文档.md  需求分析文档.md
docs/homework_requirement/: README.md  memoryriver.hpp  业务要求.md
docs/user/: 用户手册.md  系统安装手册.md
frontend/: index.html  index.js  package-lock.json  package.json
frontend/Web/: admin.html  basic.css  basic.js  book-management.html  buy.html  communication.js  index.html  index.js  log-query.html  login.html  package-lock.json  package.json  passwd.html  register.html  sessioninit.js  show.html  user-management.html  validator.js
frontend/client/: book.ico:Zone.Identifier  main.js  package-lock.json  package.json
maintenance/test/: CMakeLists.txt  config.json  test-core.cpp
