cmake_minimum_required(VERSION 3.15.2)
project(BookStore)
set(CMAKE_CXX_FLAGS "-Ofast")
file(GLOB_RECURSE main_src backend/src/*.cpp)
include_directories(${PROJECT_SOURCE_DIR}/backend/include)
include_directories(${PROJECT_SOURCE_DIR}/external)
add_executable(code ${main_src})
add_subdirectory(maintenance/test)
include(maintenance/test/ctest_config)